@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 11;
+use Test::More tests => 14;
 
 use Test::WWW::Mechanize::Catalyst 'Phonebook';
 my $mech = Test::WWW::Mechanize::Catalyst->new;
@@ -29,3 +29,7 @@ is($mech->status, 404, 'request for single unit, invalid action 404s');
 $mech->get("/units/$UFID/full/", 'request for full LDAP entry');
 $mech->title_like(qr/Full LDAP Entry for $O/i, 'response title looks like a full LDAP entry');
 $mech->content_like(qr/LDAP Entry/i, 'response looks like a full LDAP entry');
+
+$mech->get_ok("/units/$UFID/people/", 'request for people in unit');
+$mech->title_like(qr/$O/i, 'response title looks like results for people in unit');
+$mech->content_like(qr/$O/i, 'response looks like results for people in unit');
